--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: "Cascadia Code";
-    src: url('https://fonts.cdnfonts.com/css/cascadia-code');
-}
-
 * {
     margin: 0;
     font-family: 'Cascadia Code';
@@ -10,7 +5,7 @@
 }
 
 body{
-    background-color: #000;
+    background-color: #000000;
     overflow: overlay;
 }
 
@@ -24,7 +19,7 @@ body{
   }
   
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(45deg, #000, #000, #513397, #513397);
+    background: linear-gradient(0deg, #000, #513397, #513397);
     border-radius: 20px;
     /* border: 3px solid #ff0303; */
 }
@@ -81,11 +76,10 @@ div#intro{
 
 
 #self * {
-    /* position: relative; */
     color: #fff;
 }
 
-#self h3 {
+#self h2 {
     text-align: center;
     margin-top: 5%;
     left: 50vw;
@@ -94,24 +88,64 @@ div#intro{
 #self div{
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    /* display:block; */
     margin-top: 1%;
-    /* margin-left: 50%; */
-    /* justify-content: space-between; */
 }
 
-#self div div {
-    /* position: absolute;
-    display: inline-block; */
+#self div div{
+    background-color: #000000;
+    justify-content: normal;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    align-items: baseline;
     width: 500px;
-    height: 100px;
-    margin-left: 200px;
-    margin-right: 200px;
-    /* margin-right: 50px; */
-    box-shadow: 0px 0px 20px #fff;
-    border-radius: 5px;
+    height: 110px;
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 0px 0px 10px #fff;
+    border: #ffffff00 solid 1px;
+    border-radius: 10px;
+}
 
+#self div div:hover{
+    border: #fff solid 1px;
+    box-shadow: 0px 0px 30px #fff;
+    cursor: pointer;
+}
+
+#self div div h3{
+    font-size: 20px;
+    /* margin-top: 3%;
+    margin-left: 3%; */
+}
+
+#self div div p{
+    font-weight: 300;
+    margin-top: 10px;
+}
+
+#self div div div{
+    /* margin-top: 10px; */
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    height: auto;
+    box-shadow: none;
+    border: none;
+    border-radius: 0px;
+    margin: 0;
+}
+
+#self div div div svg{
+    fill: rgb(108, 4, 156);
+}
+
+div#LanguageColor{
+    width: 12px;
+    height: 12px;
+    margin-right: 3px;
+    border-radius: 10px;
 }
 
 #stats {
