--- a/main/templates/main/main.jinja
+++ b/main/templates/main/main.jinja
@@ -81,7 +81,11 @@
 					{% for act in activity.data.activities%}
 						{% if act.assets %}
 							{{ "use" }}
-							<div id="vscode" style="--bg-image: url('https://cdn.discordapp.com/app-assets/{{act.application_id}}/{{act.assets.small_image}}.png');">{{ act.name }}</div>
+							<div id="vscode">
+							{{ act.name }}
+							<span>{{ act.name }}<span>{{ act.name }}</span></span>
+							<img src="https://cdn.discordapp.com/app-assets/{{act.application_id}}/{{act.assets.small_image}}.png">
+							</div>
 							{% if act.details != 'Idling'%}
 								{{"and"}}
 								<span id="file">{{act.details|eval:".replace('E', 'e').replace('\n','')+'.'"}}</span>
