--- a/main/templates/main/main.jinja
+++ b/main/templates/main/main.jinja
@@ -5,7 +5,7 @@
 	<head>
 		<link rel="stylesheet" href="https://fonts.cdnfonts.com/css/cascadia-code">
 		<link rel="stylesheet" href="https://fonts.cdnfonts.com/css/cascadia-mono">
-		<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
 		<link rel="icon" href="https://cdn.discordapp.com/avatars/645530866663161856/80e66dbaf555025529f3772e44632557.webp?size=512">
 		<meta charset="utf-8"/>
 		<title>NoneType4Name.</title>
@@ -82,8 +82,9 @@
 							{% with act.state|eval:".split(': ')[1]" as ws %}
 							<div id="project">
 								<img src="https://cdn.discordapp.com/app-assets/{{act.application_id}}/{{act.assets.large_image}}.png">
-								<div><h3 id="vscode">{{act.name}}</h3></div>
-								<div><p id="elaps">{{act.timestamps.start|to_strtime}}</p><p id="file">{{act.details|eval:".replace('E', 'e').replace('\n','')+'.'"}}</p></div>
+								<div><p id="vscode name">{{act.name}}</p></div>
+								<div><p id="elaps">{{act.timestamps.start|to_strtime}}</p></div>
+								<div><p id="file">{{act.details|eval:".replace('E', 'e').replace('\n','')+'.'"}}</p></div>
 								{% with ws|is_repos as url %}
 								{% if url %}
 									<div><button class="enable" ws={{ws}} onclick="window.open('{{ url }}', '_blank')">View repository</p></div>
