--- a/main/templates/main/main.jinja
+++ b/main/templates/main/main.jinja
@@ -15,7 +15,7 @@
             <div id="intro">
 				<h1>Hello, i'm NoneType4Name.</h1>
 				<h2><span style="color: #882b2b">\t</span>Self-taught software enginee.<span style="color: #ffd000">\n</span></h2>
-				<h2><span style="color: #882b2b">\t</span>Yong programmer/developer<span style="color: #ffd000">\n</span></h2>
+				<h2><span style="color: #882b2b">\t</span>Young programmer/developer<span style="color: #ffd000">\n</span></h2>
 				<h2><span style="color: #882b2b">\t</span>2.5 years of experience in IT<span style="color: #ffd000">\n</span></h2>
 			</div>
 
